tests/compile-error/checker-icpc/checker/checker.cpp
nah i really don't feel like doing it :(
